inject data into pipleine
